--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<style type="text/css" media="screen">
 		body{
 			margin: 0;
+			border: 10px solid #192b36;
 		}
 		img{
 			max-width: 100%;
@@ -16,7 +17,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<<img src="header.jpg" alt="">
+	<img src="header.jpg" alt="">
 	<img src="hero.jpg" alt="">
 	<img src="acustica.jpg" alt="">
 	<img src="clasica.jpg" alt="">
